--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,6 +12,6 @@ steps:
 
   # Start container on existing VM instance
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'compute', 'instances', 'add-tags', '<INSTANCE_NAME>', '--tags', 'docker']
+    args: ['beta', 'compute', 'instances', 'add-tags', 'someinstance', '--tags', 'docker']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'compute', 'ssh', '--zone', 'us-central1-a', '<INSTANCE_NAME>', '--command', 'sudo docker run -d -p 80:80 gcr.io/majornews/majornewsdata']
+    args: ['beta', 'compute', 'ssh', '--zone', 'us-central1-a', 'someinstance', '--command', 'sudo docker run -d -p 80:80 gcr.io/majornews/majornewsdata']
