--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,11 @@ steps:
 
   # Start container on existing VM instance
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'compute', 'instances', 'add-tags', 'someinstance', '--tags', 'docker']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'compute', 'instances', 'add-tags', 'someinstance',
-         '--tags', 'http-server,https-server',
-         '--zone=us-central1-a']
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        gcloud beta compute ssh someinstance --zone=us-central1-a --command='docker run -p 80:80 gcr.io/majornews/majornewsdata:latest'
+    id: 'docker-run'
+    waitFor:
+      - '-'
