--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,4 +14,4 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['beta', 'compute', 'instances', 'add-tags', 'someinstance',
          '--tags', 'http-server,https-server',
-         '--zone=<ZONE>']
+         '--zone=us-central1']
